[gd_scene load_steps=25 format=2]

[ext_resource path="res://Levels/Level1paths/FloppaDrone.gd" type="Script" id=1]
[ext_resource path="res://Bingus Assets/graphics/bingusregulardrone/1.png" type="Texture" id=2]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/5.png" type="Texture" id=3]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/2.png" type="Texture" id=4]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/15.png" type="Texture" id=5]
[ext_resource path="res://Bingus Assets/graphics/bingusregulardrone/0.png" type="Texture" id=6]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/8.png" type="Texture" id=7]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/13.png" type="Texture" id=8]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/4.png" type="Texture" id=9]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/1.png" type="Texture" id=10]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/0.png" type="Texture" id=11]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/10.png" type="Texture" id=12]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/6.png" type="Texture" id=13]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/7.png" type="Texture" id=14]
[ext_resource path="res://Bingus Assets/graphics/bingusregulardrone/2.png" type="Texture" id=15]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/3.png" type="Texture" id=16]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/11.png" type="Texture" id=17]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/16.png" type="Texture" id=18]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/9.png" type="Texture" id=19]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/14.png" type="Texture" id=20]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/12.png" type="Texture" id=21]
[ext_resource path="res://Bingus Assets/sounds/explosion2.wav" type="AudioStream" id=22]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 15 ) ],
"loop": true,
"name": "drone",
"speed": 30.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 19 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 5 ), ExtResource( 18 ) ],
"loop": false,
"name": "explosion",
"speed": 25.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "fade"
length = 0.64
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.227451 ) ]
}

[node name="FloppaDrone" type="Area2D"]
collision_layer = 8
collision_mask = 199
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -10, -24, -22, -41, 1, -24, 7, -23, 13, -20, 31, -33, 30, -28, 20, -15, 35, -5, 34, 9, 27, 15, 22, 16, 32, 32, 32, 34, 15, 22, 10, 26, 1, 26, -19, 47, -18, 42, -9, 28, -16, 28, -23, 31, -30, 32, -34, 31, -34, 46, -35, 46, -39, 40, -40, 35, -38, 28, -36, 24, -26, 14, -23, 13, -17, 11, -17, -7, -23, -7, -36, -21, -39, -25, -40, -28, -40, -33, -39, -36, -36, -40, -34, -42, -36, -37, -36, -31, -34, -28, -25, -27, -15, -24 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 2 )
animation = "drone"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/fade = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -6.23

[connection signal="area_entered" from="." to="." method="_on_FloppaDrone_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_FloppaDrone_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
